--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -12,6 +12,7 @@
   <%= form.inputs do %>
     <%= form.input :first_name, :input_html => {:class => "span6"} %>
     <%= form.input :last_name, :input_html => {:class => "span6"} %>
+    <%= form.input :email, :input_html => {:class => "span6"} %>
     <%= form.input :about_me, :input_html => {:class => "span6", :rows => 5} %>
     <%= form.input :studies, :input_html => {:class => "span6", :rows => 5} %>
     <%= form.input :birth_date, :as => :string, :input_html => {:placeholder => "dd/mmm/yy", :class => 'span6 datepicker'} %>
