--- a/app/assets/stylesheets/default.css
+++ b/app/assets/stylesheets/default.css
@@ -314,6 +314,12 @@ ul.left-nav-main-ul {
 	width: 150px;
 }
 
+.left-nav-main-ul li a.actualizaciones.active {
+	background: #00afc9 url(menu-actualizaciones.png) no-repeat 5px;
+	width: 150px;
+	color: #fff;
+}
+
 .left-nav-main-ul li a.discusiones {
 	background: url(menu-discusiones.png) no-repeat 5px;
 	padding-left: 30px;
@@ -324,6 +330,12 @@ ul.left-nav-main-ul {
 	width: 150px;
 }
 
+.left-nav-main-ul li a.discusiones.active {
+	background: #00afc9 url(menu-discusiones.png) no-repeat 5px;
+	width: 150px;
+	color: #fff;
+}
+
 .left-nav-main-ul li a.tareas {
 	background: url(menu-tareas.png) no-repeat 5px;
 	padding-left: 30px;
@@ -332,6 +344,12 @@ ul.left-nav-main-ul {
 .left-nav-main-ul li a.tareas:hover {
 	background: #00afc9 url(menu-tareas.png) no-repeat 5px;
 	width: 150px;
+}
+
+.left-nav-main-ul li a.tareas.active {
+	background: #00afc9 url(menu-tareas.png) no-repeat 5px;
+	width: 150px;
+	color: #fff;
 }
 
 .left-nav-main-ul li a.documentos {
@@ -374,6 +392,12 @@ ul.left-nav-main-ul {
 	width: 150px;
 }
 
+.left-nav-main-ul li a.informacion.active {
+	background: #00afc9 url(menu-info.png) no-repeat 5px;
+	width: 150px;
+	color: #fff;
+}
+
 .left-nav-main-ul li a.miembros {
 	background: url(menu-amigos.png) no-repeat 5px;
 	padding-left: 30px;
@@ -383,6 +407,12 @@ ul.left-nav-main-ul {
 .left-nav-main-ul li a.miembros:hover {
 	background: #00afc9 url(menu-amigos.png) no-repeat 5px;
 	width: 150px;
+}
+
+.left-nav-main-ul li a.miembros.active {
+	background: #00afc9 url(menu-amigos.png) no-repeat 5px;
+	width: 150px;
+	color: #fff;
 }
 
 .left-nav-main-ul li a.solicitudes {
@@ -396,7 +426,7 @@ ul.left-nav-main-ul {
 }
 
 .left-nav-main-ul li a.solicitudes.active {
-	background: #00afc9 url(notification.png) no-repeat 5px;
+	background: #00ccec url(notification.png) no-repeat 5px;
 	width: 150px;
 	color: #fff;
 }
