--- a/app/views/courses/edit.html.erb
+++ b/app/views/courses/edit.html.erb
@@ -15,6 +15,7 @@
     <div class="row">
       <div class="span3">
         <%= render :partial => "course_menu" %>
+        <%= render :partial => "members_menu" %>
       </div>
       <div class="span10">
         <h1>Editar Curso</h1>
