--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -25,7 +25,7 @@
             <h2><%= @discussion.title %></h2>
             <div class="row">
               <div class="span1"><%= link_to(image_tag(@discussion.starter.avatar_file.xsmall.url), user_path(@discussion.starter)) %></div>
-              <div class="span4 left-margin small"><%= t('discussions.ago')%> <%= time_ago_in_words(@discussion.created_at) %> <%= t('discussions.by')%> <%= link_to(@discussion.starter.name, user_path(@discussion.starter)) %></div>
+              <div class="span4 left-margin author"><%= t('discussions.ago')%> <%= time_ago_in_words(@discussion.created_at) %> <%= t('discussions.by')%> <%= link_to(@discussion.starter.name, user_path(@discussion.starter)) %></div>
             </div>
           </div>
           <div class="span3" style="margin-left:70px;">
