supervisor has permissions to view everything

--- a/app/views/supervisors/show.html.erb
+++ b/app/views/supervisors/show.html.erb
@@ -4,7 +4,7 @@
 <p>content for sidebar:</p>
 
 <ul>
-  <li><%= link_to t('.courses'), courses_supervisor_path %></li>
+  <li><%= link_to t('.courses'), courses_path %></li>
   <li><%= link_to t('.teachers'), teachers_supervisor_path %></li>
   <li><%= link_to t('.students'), students_supervisor_path %></li>
   <li><%= link_to t('.pending_approvals'), pending_approvals_supervisor_path %></li>
