--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -25,42 +25,7 @@
         </div>
         
         <div class="courses">
-          <% @courses.each do |course| %>
-            <div class="course padding-all <%= cycle('odd', 'even') %>">
-              <div class="row">
-                <div class="span6">
-                  <h3>
-                    <%= current_user.visible_courses.include?(course) ? link_to(course.name, course) : course.name %>
-                  </h3>
-                </div>
-                <div class="span4" style="margin-top: 5px;">
-                  <% enrollment = current_user.enrollments.where(:course_id => course).first %>
-                  <% if !enrollment %>
-                    <span class="label-tag notice course-notification"><%= link_to t(".request_join"), course_requests_path(course), :method => :post %></span>
-                    <% elsif enrollment.pending? %>
-                      <span class="label-tag important"><%= t('.join_requested') %></em>
-
-                    <% elsif enrollment.rejected? %>
-                      <span class="label-tag important"><%= t('.join_rejected') %></span>
-                      <%= link_to t(".request_join_again"), course_requests_path(course), :method => :post %>
-
-                    <% elsif enrollment.accepted? %>
-                      <span class="label-tag success"><%= t('.join_accepted') %></span>
-
-                    <% end %>
-                  
-                <% if current_user.manageable_courses.include? course %>
-                  <span class="label-tag notice course-notification"><%= link_to(t('courses.edit'), edit_course_path(course)) %></span> 
-                  <!--<span class="label-tag important course-notification"><%= link_to(t('courses.delete'), course_path(course), :confirm => t('confirm_delete'), :method => :delete) %></span>-->
-                <% end %>
-                </div>
-              </div>
-              <div class="course-by">
-                <%= t('courses.by') %> <%= course.owner.name %> - <%= course.reference %>
-              </div>
-              <p class="padding-right"><%= truncate(course.description, :length => 200).html_safe %></p>
-            </div>
-          <% end %>
+          <%= render :partial => 'course', :collection => @courses %>
         </div>
       </div>
       <div class="span3" style="margin:0;">
