--- a/app/views/discussions/index.html.erb
+++ b/app/views/discussions/index.html.erb
@@ -29,9 +29,9 @@
           </div>
         </div>
 
-        <div class="courses">
+        <div class="discussions">
           <% @discussions.order("created_at DESC").each do |discussion| %>
-            <div class="row course padding-all <%= cycle('odd', 'even') %>" style="margin-left:0;">
+            <div class="discussion row course padding-all <%= cycle('odd', 'even') %>" style="margin-left:0;">
               <div class="span7">
                 <h3><%= link_to discussion.title, discussion %></h3>
               </div>
