--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -29,10 +29,10 @@
             </div>
           </div>
           <div class="span3" style="margin-left:70px;">
-            <% if @discussion.comments.empty? %>
+            <% if @comments.empty? %>
               <%= link_to t('.remove'), discussion_url(@discussion), :id => 'remove_discussion', :class => 'btn danger right', :style => 'margin-left:10px;', :method => :delete, :confirm => t('confirm_delete')  %>
             <% end %>
-            <%= link_to t('.edit'),   edit_discussion_url(@discussion), :id => 'edit_discussion', :class => 'btn info right' %>
+            <%= link_to t('.edit'), edit_discussion_url(@discussion), :id => 'edit_discussion', :class => 'btn info right' %>
           </div>
         </div>
               
@@ -42,9 +42,9 @@
       
       <div class="actions">
         <h2><%= t('courses.assignments.comments') %></h2>
-        <%= render :partial => 'comments/form',       :locals => {:commentable => @discussion} %>
+        <%= render :partial => 'comments/form', :locals => {:commentable => @discussion} %>
       </div>
-      <%= render :partial => 'comments/comments',   :locals => {:commentable => @discussion} %>
+      <%= render :partial => 'comments/comments', :locals => {:commentable => @discussion, :comments => @comments} %>
       
       </div>
       
