--- a/app/views/assignments/show.html.erb
+++ b/app/views/assignments/show.html.erb
@@ -48,10 +48,10 @@
       
         <div class="actions">
           <h2><%= t('courses.assignments.comments') %></h2>
-          <%= render :partial => 'comments/form',       :locals => {:commentable => @assignment} %>
+          <%= render :partial => 'comments/form', :locals => {:commentable => @assignment} %>
         </div>
       
-        <%= render :partial => 'comments/comments',   :locals => {:commentable => @assignment} %>
+        <%= render :partial => 'comments/comments', :locals => {:commentable => @assignment, :comments => @comments} %>
         </div>
       
         <div class="span3" style="margin:0;">
