--- a/app/views/courses/wall.html.erb
+++ b/app/views/courses/wall.html.erb
@@ -22,9 +22,9 @@
         
         <div class="actions">
           <h2><%= t('.header') %></h2>
-          <%= render :partial => 'comments/form',       :locals => {:commentable => @course} %>
+          <%= render :partial => 'comments/form',  :locals => {:commentable => @course} %>
         </div>
-        <%= render :partial => 'comments/comments',   :locals => {:commentable => @course} %>
+        <%= render :partial => 'comments/comments', :locals => {:commentable => @course, :comments => @comments} %>
       </div>
       <div class="span3" style="margin:0;">
         <%= render :partial => "shared/adds" %>
