--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<%= link_to wall_for_user_path 'Muro', @user  %>
+<%= link_to 'Muro', wall_for_user_path(@user)  %>
 
 <div class="container">
   <div class="content">
