--- a/app/views/users/wall.html.erb
+++ b/app/views/users/wall.html.erb
@@ -4,6 +4,9 @@
     <div class="row">
       <div class="span16">
         <ul class="breadcrumb">
+          <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
+          <li><%= link_to(current_user.first_name + current_user.last_name, current_user) %><span class="divider">/</span></li>
+          <li class="active"><%= t("wall.wall") %></li>
         </ul>  
       </div>
     </div>
