--- a/app/views/assignments/index.html.erb
+++ b/app/views/assignments/index.html.erb
@@ -31,9 +31,9 @@
           </div>
         </div>
 
-        <div class="courses">
-          <% @assignments.order("due_to DESC").each do |assignment| %> 
-            <div class="course padding-all <%= cycle('odd', 'even') %>">
+        <div class="assignments">
+          <% @assignments.each do |assignment| %> 
+            <div class="assignment padding-all <%= cycle('odd', 'even') %>">
             <h3><%= link_to assignment.name, assignment %></h3>
             <%= assignment.course.name %>
             <div class="row">
