--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,7 +5,7 @@
       <div class="span16">
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
-          <li class="active"><%= current_user.first_name %> <%= current_user.last_name %></li>
+          <li class="active"><%= current_user.name %></li>
         </ul>  
       </div>
     </div>
