--- a/app/views/users/wall.html.erb
+++ b/app/views/users/wall.html.erb
@@ -5,7 +5,7 @@
       <div class="span16">
         <ul class="breadcrumb">
           <li><%= link_to("Dashboard", dashboard_path) %> <span class="divider">/</span></li>
-          <li><%= link_to("#{current_user.first_name} #{current_user.last_name}", current_user) %><span class="divider">/</span></li>
+          <li><%= link_to("#{@user.first_name} #{@user.last_name}", user_path(@user)) %><span class="divider">/</span></li>
           <li class="active"><%= t("profile.wall") %></li>
         </ul>  
       </div>
