La paginación de comentarios es un infinite scroll - Finished - https://www.pivotaltracker.com/story/show/22196333

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -35,4 +35,8 @@
   <% end %>
 </div>
 
-<%= paginate comments %>
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
