--- a/app/views/courses/wall.html.erb
+++ b/app/views/courses/wall.html.erb
@@ -38,7 +38,8 @@
   <%= render :partial => "shared/footer" %>
 </div>
 
-
 <script type="text/javascript">
-  setupAutoScroll();
+  $(function(){
+    setupAutoScroll();
+  });
 </script>
