--- a/app/views/users/wall.html.erb
+++ b/app/views/users/wall.html.erb
@@ -34,3 +34,9 @@
   </div>
   <%= render :partial => "shared/footer" %>
 </div>
+
+<script type="text/javascript">
+  $(function(){
+    setupAutoScroll();
+  });
+</script>
