supervisor can upload logo for network

--- a/app/views/supervisor/networks/edit.html.erb
+++ b/app/views/supervisor/networks/edit.html.erb
@@ -1,6 +1,14 @@
 <h1>Edit Network</h1>
 
 <%= semantic_form_for [:supervisor, @network] do |form| %>
+  <%= form.inputs :file do %>
+    <li class='preview'>
+      <img src="<%= @network.logo_file.thumb.url %>"/>
+    </li>
+    <%= form.input :logo_file, :as => :file, :input_html => {'data-upload-path' => upload_logo_for_supervisor_network_path} %>
+    <%= form.input :logo_file_cache, :as => :hidden %>
+  <% end %>
+
   <%= form.inputs do %>
     <%= form.input :slogan %>
     <%= form.input :welcome_message %>
